Get row mode working